--- a/index.html
+++ b/index.html
@@ -11,48 +11,45 @@
 </head>
 <body>
     <main>
-        <article>
-            <form>
-                <div id="dataNascimento">
-                    
-                    <div>
-                        <h6 class="ErroFontBlack">d a y</h6> 
-                        <input class="ErroBorderBlack" id="day" placeholder="DD" type="number" required>
-                        <p class="EmptyInputs"></p>
-                    </div> 
-                    <div>
-                        <h6 class="ErroFontBlack">m o n t h</h6>
-                        <input class="ErroBorderBlack" id="month" placeholder="MM" type="number" required>
-                        <p class="EmptyInputs"></p>
-                    </div>
-                    <div>
-                        <h6 class="ErroFontBlack">y e a r</h6>
-                        <input class="ErroBorderBlack" id="year" placeholder="YYYY" type="number" required>
-                        <p class="EmptyInputs"></p>
-                    </div>
+        <form>
+            <div id="dataNascimento">                    
+                <div>
+                    <h6 class="h6">d a y</h6> 
+                    <input id="day" placeholder="DD" type="number" required>
+                    <p class="error-text-day error-texts"></p>
+                </div> 
+                <div>
+                    <h6 class="h6">m o n t h</h6>
+                    <input id="month" placeholder="MM" type="number" required>
+                    <p class="error-text-month error-texts"></p>
                 </div>
-                <div id="midSection">
-                    <div id="borda"></div>
-                    <div id="botaoImage">
-                        <img type="submit" onclick="validarIdade()" id="purple" src="Images/purple.svg" alt="erro">
-                    </div>
+                <div>
+                    <h6 class="h6">y e a r</h6>
+                    <input id="year" placeholder="YYYY" type="number" required>
+                    <p class="error-text-year error-texts"></p>
                 </div>
-                <div id="idade">
-                    <div class="idade">
-                        <p id="years">--</p>
-                        <h1>years</h1>
-                    </div>
-                    <div class="idade">
-                        <p id="months">--</p>
-                        <h1>months</h1>
-                    </div>
-                    <div class="idade">
-                        <p id="days">--</p>
-                        <h1>days</h1>
-                    </div>
+            </div>
+            <div id="midSection">
+                <div id="borda"></div>
+                <div class="btn" id="botaoImage">
+                <img src="Images/icon-arrow.svg" alt="erro">
                 </div>
-            </form>
-        </article>
+            </div>
+            <div id="idade">
+                <div class="idade">
+                    <p id="years">--</p>
+                    <h1>years</h1>
+                </div>
+                <div class="idade">
+                    <p id="months">--</p>
+                    <h1>months</h1>
+                </div>
+                <div class="idade">
+                    <p id="days">--</p>
+                    <h1>days</h1>
+                </div>
+            </div>
+        </form>
     <main>
 </body>
 <script src="script.js"></script>
